# nyig-td

./: .gitignore  CLAUDE.md  FASTAPI_INTEGRATION.md  GEMINI.md  README.md  dev.sh  issues.md  pyproject.toml  setup.sh
.github/workflows/: publish.yml
docs/: 03-typescript-api.md  04-react-app.md
examples/: mcmahon_80_players.py
lib/: .gitignore  CLAUDE.md  DEVELOPMENT.md  GEMINI.md  README.md  pyproject.toml
lib/examples/: mcmahon_divisions.py  mcmahon_tournament.py  swiss_tournament.py
lib/scripts/: check_version.py
lib/src/nyig_td/: __init__.py  handicap.py  models.py  pairing.py  ranks.py  standings.py
lib/tests/: test_handicap.py  test_pairing.py  test_ranks.py  test_real_tournament_scenarios.py  test_standings.py
lib/tests/integration/: __init__.py  conftest.py  test_edge_cases.py  test_mcmahon_with_divisions.py  test_realistic_scenarios.py  test_swiss_with_divisions.py
nyig-tournament-docs/: 01-nyig-td-package.md  02-nyig-td-api.md  05-deployment.md  06-integration-testing.md
pairing-api/: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
pairing-api/src/nyig_td_api/: __init__.py  main.py  schemas.py
pairing-api/src/nyig_td_api/routers/: handicap.py  pairing.py  standings.py  validation.py
pairing-api/src/pairing_api/: __init__.py  schemas.py
pairing-api/src/pairing_api/routers/: __init__.py  standings.py
pairing-api/tests/: test_handicap_api.py  test_health.py  test_pairing_api.py  test_standings_api.py  test_validation_api.py
pairing-api/tests/integration/: __init__.py  test_api_tournaments_with_divisions.py
src/nyig_td/: __init__.py  mcmahon.py  metrics.py  models.py  single_elimination.py  swiss.py
src/nyig_td/models/: __init__.py  enums.py  match.py  metrics_config.py  participant.py  standing.py  tournament.py
td-api/: .env.example  CLAUDE.md  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  simulate-tournament.sh  test-workflow.sh
td-api/prisma/: schema.prisma
td-api/src/: app.ts  index.ts
td-api/src/config/: index.ts
td-api/src/middleware/: errorHandler.ts
td-api/src/routes/: index.ts  players.ts  tournaments.ts
td-api/src/services/: index.ts  nyigTdClient.ts  playerService.ts  tournamentService.ts
td-api/src/types/: index.ts
td-api/src/utils/: validation.ts
td-api/tests/middleware/: errorHandler.test.ts
td-api/tests/routes/: players.test.ts  tournaments.test.ts
td-api/tests/services/: nyigTdClient.test.ts  (+3 more)
tests/: test_coverage_gaps.py  test_fixed_bracket.py  test_mcmahon.py  test_metrics.py  test_swiss.py  test_swiss_scenarios.py  test_us_go_scenarios.py
web/: .env.example  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts  vitest.setup.ts
web/src/: App.tsx  index.css
web/tests/: utils.tsx
(+30 files in other folders)
